Medium Challenge initial push

--- a/Easy/index.html
+++ b/Easy/index.html
@@ -7,5 +7,43 @@
     <link rel="stylesheet" href="flag.css" />
     <title>Easy Challenge</title>
   </head>
-  <body></body>
+  <body>
+    <!-- <div id="flag-top"> -->
+    <!-- <img
+        src="/Users/elijah/Documents/GitHub/Guided-Inquiry-Advanced-CSS/Easy/image/Screen Shot 2022-09-07 at 7.01.27 PM.png"
+        alt="American Flag Stars"
+        width="100px"
+        height="100px"
+      /> -->
+    <!-- <div class="stripe"></div>
+      <div class="stripe"></div>
+      <div class="stripe"></div>
+      <div class="stripe"></div>
+      <div class="stripe"></div>
+      <div class="stripe"></div>
+      <div class="stripe"></div>
+    </div>
+    <div id="flag-bottom">
+      <div class="stripe-w"></div>
+      <div class="stripe-r"></div>
+      <div class="stripe-w"></div>
+      <div class="stripe-r"></div>
+      <div class="stripe-w"></div>
+      <div class="stripe-r"></div>
+    </div> -->
+    <div id="grid">
+      <div id="stars">
+        <img
+          src="/Users/elijah/Documents/GitHub/Guided-Inquiry-Advanced-CSS/Easy/image/Stars.png"
+          alt="american flag stars"
+        />
+      </div>
+      <div id="stA"></div>
+      <div id="stB"></div>
+      <div id="stC"></div>
+      <div id="stD"></div>
+      <div id="stE"></div>
+      <div id="stF"></div>
+    </div>
+  </body>
 </html>
