medium challenge full push

--- a/Medium/menu.html
+++ b/Medium/menu.html
@@ -10,49 +10,49 @@
   <body>
     <h1>Fountain Pens</h1>
     <ul class="products">
-      <li>
+      <li class="prod1">
         <img src="/Medium/Images/AmazonBasics.webp" />
         <h3>Amazon Basics Fountain Pen</h3>
         <p><a href="https://a.co/d/9pUW2cv">$16.65</a></p>
         <p>Refillable fountain pen by Amazon Basics.</p>
       </li>
-      <li>
+      <li class="prod2">
         <img src="/Medium/Images/Asvine.webp" />
         <h3>Asvine Fountain Pen</h3>
         <p><a href="https://a.co/d/ciyZcaf">$16.65</a></p>
         <p>Refillable fountain pen by Amazon Basics.</p>
       </li>
-      <li>
+      <li class="prod3">
         <img src="/Medium/Images/Lamy.webp" />
         <h3>Lamy Safari</h3>
         <p><a href="https://a.co/d/7kHS32J">$19.00</a></p>
         <p>Lamy's popular Safari fountain pen.</p>
       </li>
-      <li>
+      <li class="prod4">
         <img src="/Medium/Images/PilotVarsity.webp" />
         <h3>Pilot Varsity Disposable Pen</h3>
         <p><a href="https://a.co/d/cxDVkFk">$12.99</a></p>
         <p>A six pack of disposable fountain pens by Pilot.</p>
       </li>
-      <li>
+      <li class="prod5">
         <img src="/Medium/Images/PilotMetro.webp" />
         <h3>Pilot Metropolitan</h3>
         <p><a href="https://a.co/d/aKDcKgy">$17.50</a></p>
         <p>A sleek, low-cost fountain pen by Pilot.</p>
       </li>
-      <li>
+      <li class="prod6">
         <img src="/Medium/Images/Zebra.webp" />
         <h3>Zebra V-301</h3>
         <p><a href="https://a.co/d/eNrnB2p">$3.79</a></p>
         <p>Durable stainless steel fountain pen by Zebra.</p>
       </li>
-      <li>
+      <li class="prod7">
         <img src="/Medium/Images/PilotMR.webp" />
         <h3>Pilot MR Retro Pop</h3>
         <p><a href="https://a.co/d/7YEGESx">$19.59</a></p>
         <p>A stylish turquoise Retro Pop fountain pen by Pilot.</p>
       </li>
-      <li>
+      <li class="prod8">
         <img src="/Medium/Images/CrossATX.webp" />
         <h3>Amazon Basics Fountain</h3>
         <p><a href="https://a.co/d/6UaXNF5">$59.99</a></p>
