--- a/Easy/index.html
+++ b/Easy/index.html
@@ -8,42 +8,27 @@
     <title>Easy Challenge</title>
   </head>
   <body>
-    <!-- <div id="flag-top"> -->
-    <!-- <img
-        src="/Users/elijah/Documents/GitHub/Guided-Inquiry-Advanced-CSS/Easy/image/Screen Shot 2022-09-07 at 7.01.27 PM.png"
-        alt="American Flag Stars"
-        width="100px"
-        height="100px"
-      /> -->
-    <!-- <div class="stripe"></div>
-      <div class="stripe"></div>
-      <div class="stripe"></div>
-      <div class="stripe"></div>
-      <div class="stripe"></div>
-      <div class="stripe"></div>
-      <div class="stripe"></div>
-    </div>
-    <div id="flag-bottom">
-      <div class="stripe-w"></div>
-      <div class="stripe-r"></div>
-      <div class="stripe-w"></div>
-      <div class="stripe-r"></div>
-      <div class="stripe-w"></div>
-      <div class="stripe-r"></div>
-    </div> -->
-    <div id="grid">
-      <div id="stars">
-        <img
-          src="/Users/elijah/Documents/GitHub/Guided-Inquiry-Advanced-CSS/Easy/image/Stars.png"
-          alt="american flag stars"
-        />
+    <div class="parent">
+      <div class="div1">
+        <img src="image/Stars.png" alt="american flag stars" />
       </div>
-      <div id="stA"></div>
-      <div id="stB"></div>
-      <div id="stC"></div>
-      <div id="stD"></div>
-      <div id="stE"></div>
-      <div id="stF"></div>
+      <div class="div2"></div>
+      <div class="div3"></div>
+      <div class="div4"></div>
+      <div class="div5"></div>
+      <div class="div6"></div>
+      <div class="div7"></div>
+      <div class="div8"></div>
+    </div>
+    <div class="stripes">
+      <ul>
+        <li class="red1"></li>
+        <li class="white1"></li>
+        <li class="red2"></li>
+        <li class="white2"></li>
+        <li class="red3"></li>
+        <li class="white3"></li>
+      </ul>
     </div>
   </body>
 </html>
